--- a/songplaylist/src/assets/css/Header.css
+++ b/songplaylist/src/assets/css/Header.css
@@ -1,3 +1,21 @@
 #header{
-    font-size:2em;
+    font-size:1.4em;
+    background-color: rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px #141414;
+}
+
+.header-link:after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: white;
+    transition: all 0.2s ease-in-out;
+    transform: scale(0);
+}
+
+.header-link:hover:after{
+    transform: scale(1);
 }
