--- a/songplaylist/src/assets/css/Player.css
+++ b/songplaylist/src/assets/css/Player.css
@@ -3,8 +3,8 @@
     color:white;
 }
 
-.my-card{
-    border-radius: 15px !important;
+#player-card{
+    border-radius: 15px 0 0 15px!important;
 }
 
 .volume-slider{
