--- a/songplaylist/src/assets/css/Header.css
+++ b/songplaylist/src/assets/css/Header.css
@@ -1,6 +1,7 @@
 #header{
+    z-index:10;
     font-size:1.4em;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.9);
     box-shadow: 0 0 10px #141414;
 }
 
