feat: click event & fade out

--- a/angular-1/src/app/app.component.html
+++ b/angular-1/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="boxes-container">
-  <app-box *ngFor="let box of boxes" [title]="box.title" [content]="box.content" [color]="box.color"></app-box>
+  <app-box *ngFor="let box of boxes" [id]="box.id" [title]="box.title" [content]="box.content" [color]="box.color" (clickedEvent)="handleClickBox(box.id)"></app-box>
 </div>
