--- a/angular-1/src/app/box/box.component.html
+++ b/angular-1/src/app/box/box.component.html
@@ -1,4 +1,4 @@
-<div class="box">
+<div class="box" [ngClass]="{'box-clicked':clicked}" (click)="handleClick()">
   <div class="box-circle" [style.backgroundColor]="color"></div>
   <div>
     <div class="box-title">{{ title }}</div>
