--- a/angular-1/src/app/app.component.html
+++ b/angular-1/src/app/app.component.html
@@ -1,3 +1,10 @@
 <div class="boxes-container">
-  <app-box *ngFor="let box of boxes" [id]="box.id" [title]="box.title" [content]="box.content" [color]="box.color" (clickedEvent)="handleClickBox(box.id)"></app-box>
+  <!--<app-box *ngFor="let box of boxes" [id]="box.id" [title]="box.title" [content]="box.content" [color]="box.color" (clickedEvent)="handleClickBox(box.id)"></app-box>-->
+  <hr/>
+  <app-box *ngFor="let user of users"
+           [id]="user.id"
+           [title]="user.name"
+           [background]="user.image"
+           (clickedEvent)="handleClickBox(user.id)"
+  ></app-box>
 </div>
