--- a/angular-1/src/app/errors/error/error.component.html
+++ b/angular-1/src/app/errors/error/error.component.html
@@ -1,6 +1,6 @@
 <div class="full-page">
   <div class="error-container">
-    <div class="error-title">O<span>O</span>PS...</div>
+    <div class="error-title">O<span class="error-letter">O</span>PS...</div>
     <div class="error-content">An error occured :(</div>
   </div>
 </div>
