--- a/angular-1/src/app/errors/error/error.component.scss
+++ b/angular-1/src/app/errors/error/error.component.scss
@@ -1,6 +1,11 @@
 .error-container{
   margin: auto;
   padding:2em;
+  box-shadow: 1px 1px 15px rgba(44,122,123,0.5);
+  border-top: solid 4px #2c7a7b;
+  border-radius: 5px;
+  text-align: center;
+  color: #2c7a7b;
 }
 
 .error-title{
@@ -9,4 +14,11 @@
 
 .error-content{
   font-style: italic;
+}
+
+.error-letter{
+  color: black;
+}
+.error-content{
+  color:black;
 }
