feat: lazy loading

--- a/angular-1/src/app/header/header.component.html
+++ b/angular-1/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <nav>
     <ul>
       <li><a routerLink="/app">app</a></li>
-      <li><a routerLink="/error">error</a></li>
+      <li><a routerLink="/extra">extra</a></li>
     </ul>
   </nav>
 </header>
