--- a/angular-1/src/app/header/header.component.html
+++ b/angular-1/src/app/header/header.component.html
@@ -1,7 +1,12 @@
 <header>
   <div class="title">
     <span class="openMenuBtn" (click)="handleClick()">
-      {{ menuOpened ? 'X' : 'M' }}
+      <svg *ngIf="!menuOpened" width="30" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+      <svg *ngIf="menuOpened" width="30"  xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+      </svg>
     </span>
     <span>Hello</span>
   </div>
